src/test/ui/tag-variant-disr-dup.stderr
error[E0081]: discriminant value `0` already exists
  --> $DIR/tag-variant-disr-dup.rs:8:13
   |
LL |     Black = 0x000000,
   |             -------- first use of `0`
LL |     White = 0x000000,
   |             ^^^^^^^^ enum already has `0`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0081`.
